# python-project-lvl2

./: .coverage  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: github-actions-demo.yml
gendiff/: generate_diff.py  get_data.py
gendiff/scripts/: gendiff.py
tests/: expected.py  test_all.py
tests/fixtures/: file1.yaml
